ecmascript/parser/tests/typescript-errors/class/input.ts.stderr
error: Unexpected token `!`. Expected identifier, string literal, numeric literal or [ for the computed key
 --> $DIR/tests/typescript-errors/class/input.ts:2:5
  |
2 |   x?!: number;
  |     ^

error: Expected a semicolon
 --> $DIR/tests/typescript-errors/class/input.ts:2:5
  |
2 |   x?!: number;
  |     ^

